--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
+                <configuration>
+                    <warName>bookstore_pronsky</warName>
+                    <outputDirectory>${env.TOMCAT_HOME}/webapps</outputDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
