--- a/src/main/resources/connection-config.properties
+++ b/src/main/resources/connection-config.properties
@@ -1,3 +1,3 @@
-URL = jdbc:postgresql://127.0.0.1:5432/bookstore_pronsky
-USER = postgres
-PASSWORD = root
+db.url = jdbc:postgresql://127.0.0.1:5432/bookstore_pronsky
+db.user = postgres
+db.password = root
