--- a/src/main/resources/connection-config.properties
+++ b/src/main/resources/connection-config.properties
@@ -1,3 +1,3 @@
-db.url = jdbc:postgresql://127.0.0.1:5432/bookstore_pronsky
-db.user = postgres
-db.password = root
+db.url = mouse.db.elephantsql.com(mouse-01)
+db.user = lpmlhcys
+db.password = X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
