--- a/src/main/resources/connection-config.properties
+++ b/src/main/resources/connection-config.properties
@@ -1,3 +1,3 @@
-db.url = mouse.db.elephantsql.com(mouse-01)
+db.url =  jdbc:postgresql://mouse.db.elephantsql.com/lpmlhcys
 db.user = lpmlhcys
 db.password = X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
