--- a/src/main/resources/connection-config.properties
+++ b/src/main/resources/connection-config.properties
@@ -1,3 +1,8 @@
-db.url =  jdbc:postgresql://mouse.db.elephantsql.com/lpmlhcys
-db.user = lpmlhcys
-db.password = X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
+db.connection.type
+db.remote.url =  jdbc:postgresql://mouse.db.elephantsql.com/lpmlhcys
+db.remote.user = lpmlhcys
+db.remote.password = X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
+db.local.url=jdbc:postgresql://127.0.0.1:5432/bookstore_pronsky
+db.local.user=postgres
+db.local.password=root
+db.driver=org.postgresql.Driver
