--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,10 @@
             <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.25</version>
+        </dependency>
     </dependencies>
 </project>
