Spring mvc seem to be integrated into some controllers. 404 status after deployment

--- a/src/main/resources/connection-config.properties
+++ b/src/main/resources/connection-config.properties
@@ -1,4 +1,4 @@
-db.connection.type
+db.connection.type=
 db.remote.url=jdbc:postgresql://mouse.db.elephantsql.com/lpmlhcys
 db.remote.user=lpmlhcys
 db.remote.password=X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
