--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,7 @@
             <url-pattern>/controller</url-pattern>
         </filter-mapping>
 
+    <error-page>
+        <location>/error</location>
+    </error-page>
 </web-app>
