--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,11 +7,11 @@
 
         <filter>
             <filter-name>Authentication</filter-name>
-            <filter-class>online.javaclass.bookstore.controller.filter.AuthenticationFilter</filter-class>
+            <filter-class>online.javaclass.bookstore.web.filter.AuthenticationFilter</filter-class>
         </filter>
         <filter>
             <filter-name>Authorisation</filter-name>
-            <filter-class>online.javaclass.bookstore.controller.filter.AuthorisationFilter</filter-class>
+            <filter-class>online.javaclass.bookstore.web.filter.AuthorisationFilter</filter-class>
         </filter>
 
         <filter-mapping>
