Demo spring boot configuration. Error:(55, 29) Plugin 'org.springframework.boot:spring-boot-maven-plugin:' not found

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-author.validation.regexp=^[\\w'\\-,.][^0-9_!¡?÷?¿\\/+=@#$%&*(){}|~<>;:]{2,}$
-isbn.validation.regexp=^(?=(?:\\D*\\d){10}(?:(?:\\D*\\d){3})?$)[\\d-]+$
-title.validation.regexp=^[A-Za-z0-9\s\-_,.:#;()'"]+$
-punctuation.marks.sequence.regexp=[.,\/#!$%^&*;:{}=_`~()-<>]{2,}
+# Data
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://mouse.db.elephantsql.com/lpmlhcys
+spring.datasource.username=lpmlhcys
+spring.datasource.password=X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+#MVC
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+#Media
 cover.upload.dir=\Repository\bookstore\bookstore_pronsky\src\main\resources\static\coverImages
