Authorisation filter implemented, fixed some issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Data
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://mouse.db.elephantsql.com/lpmlhcys
-spring.datasource.username=lpmlhcys
-spring.datasource.password=X7rZKCkySJ4i6x4AsEG9n0ypB9G98KYF
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_pronsky
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
