--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.data.web.pageable.default-page-size=5
 spring.data.web.pageable.max-page-size=50
 spring.data.web.pageable.page-parameter=page
 spring.data.web.pageable.size-parameter=size
-spring.data.web.sort.sort-parameter=id,desc
+spring.data.web.sort.sort-parameter=id
