edit order refactored.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #Media
-cover.upload.dir=\Repository\bookstore\bookstore_pronsky\src\main\resources\static\coverImages
+cover.upload.dir=\\Repository\\bookstore\\bookstore_pronsky\\src\\main\\resources\\static\\coverImages
 #Pagination
 spring.data.web.pageable.default-page-size=5
 spring.data.web.pageable.max-page-size=50
